--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,3 +88,92 @@
   text-align: center;
   transition: all 0.2s;
 }
+
+.help-page {
+  font-family: "Work Sans", sans-serif;
+}
+.faq-heading {
+  border-bottom: #777;
+  padding: 20px 90px;
+}
+.faq-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.hr-line {
+  width: 60%;
+  margin: auto;
+}
+/* Style the buttons that are used to open and close the faq-page body */
+.faq-page {
+  /* background-color: #eee; */
+  color: #444;
+  cursor: pointer;
+  padding: 30px 20px;
+  width: 60%;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+  margin: auto;
+}
+.faq-body {
+  margin: auto;
+  /* text-align: center; */
+  width: 50%;
+  padding: auto;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active,
+.faq-page:hover {
+  background-color: #f9f9f9;
+}
+
+/* Style the faq-page panel. Note: hidden by default */
+.faq-body {
+  padding: 0 18px;
+  background-color: white;
+  display: none;
+  overflow: hidden;
+}
+
+.faq-page:after {
+  content: "\02795";
+  /* Unicode character for "plus" sign (+) */
+  font-size: 13px;
+  color: #777;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2796";
+  /* Unicode character for "minus" sign (-) */
+}
+
+.student-card {
+  position: center;
+  text-align: center;
+}
+
+.student-name {
+  border: 5px solid;
+  margin: auto;
+  width: 20%;
+  padding: 10px;
+}
+
+.generateReportButton {
+  background-color: rgb(216 180 254); /* Green */
+  border: none;
+  color: white;
+  width: fit-content;
+  height: fit-content;
+  padding: 12px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 10%;
+}
